--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-DB_DRIVER=SQL Server
-DB_HOST=mlk-edm-d-sq02
+DB_DRIVER=SQL Server Native Client 11.0
+DB_HOST=etl-db.ultimatemedical.edu
 DB_NAME=uma_dwh
 DB_PORT=
 DB_USER=
 DB_PASSWORD=
 DB_TRUSTED_CONNECTION=1
 PRODUCTION=1
+OPSGENIE_API_KEY="602e1fed-1cee-496a-8454-5d63520bfba4"
+OPSGENIE_GENIE_KEY="GenieKey"
+OPSGENIE_ENABLED=1
